--- a/chat-app/src/app/dashboard/dashboard.component.html
+++ b/chat-app/src/app/dashboard/dashboard.component.html
@@ -122,7 +122,7 @@
                 </div>
                 <br>
                 <div class="control">
-                    <button class="button" (click)="createUser()">Create user</button>
+                    <button class="button" (click)="createUser()" onClick="document.location.reload(true)">Create user</button>
                 </div>
             </div>
         </div>
@@ -131,8 +131,9 @@
             <h2 class="title is-3">Users in chat system:</h2>
             <div class="box">
                 <input class="input" type="text" placeholder="username" [(ngModel)]='usernameMakeAdmin' id='usernameMakeAdmin' name='usernameMakeAdmin'>
-                <button (click)="userMakeAdminGroup()">Make user a group admin</button>
-                <button (click)="userMakeAdminSuper()">Make user a super admin</button>
+                <button (click)="userMakeAdminGroup()" onClick="document.location.reload(true)">Make user a group admin</button>
+                <button (click)="userMakeAdminSuper()" onClick="document.location.reload(true)">Make user a super admin</button>
+                <button (click)="userMakeGroupAssis()" onClick="document.location.reload(true)">Make user a group assis</button>
             </div>
             
             <br>
